<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/persona"
            android:title="@string/menu_mi_perfil" />
        <item
            android:id="@+id/nav_qr_retiro"
            android:icon="@drawable/qr_retiro_circular"
            android:title="@string/menu_qr_retiro" />
        <item
            android:id="@+id/nav_qr_carga"
            android:icon="@drawable/qr_cargar_circular"
            android:title="@string/menu_qr_carga" />
        <item
            android:id="@+id/nav_qr_entrega"
            android:icon="@drawable/qr_entrega_circular"
            android:title="@string/menu_qr_entrega" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/information"
            android:title="@string/menu_ayuda" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/exit"
            android:title="@string/menu_cerrar_sesion" />

    </group>
</menu>