<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.logixs.logixsqr.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.logixs.logixsqr.ui.perfil.PerfilFragment"
        android:label="@string/menu_mi_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_qr_entrega"
        android:name="com.logixs.logixsqr.ui.qr_entrega.QrCargaFragment"
        android:label="@string/menu_qr_entrega"
        tools:layout="@layout/fragment_qr_entrega" />

    <fragment
        android:id="@+id/nav_qr_retiro"
        android:name="com.logixs.logixsqr.ui.qr_recibo.QrRetiroFragment"
        android:label="@string/menu_qr_retiro"
        tools:layout="@layout/fragment_qr_retiro" />
</navigation>